{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 67,
  "lineage": "e20848a0-1024-8ba5-ab39-1f5879af1b99",
  "resources": [
    {
      "module": "module.myeip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-085852f88a3d8fa18",
            "domain": "vpc",
            "id": "eipalloc-0266ad507ba552edc",
            "network_interface": "eni-0b43155ceeb606297",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-52-23-87-178.compute-1.amazonaws.com",
            "public_ip": "52.23.87.178",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.myeip.aws_network_interface.web-server_nic",
            "module.myeip.aws_security_group.allow_web",
            "module.myvpc.aws_internet_gateway.gw",
            "module.myvpc.aws_subnet.subnet-1",
            "module.myvpc.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:608389591302:internet-gateway/igw-06e2bef3c00817919",
            "id": "igw-06e2bef3c00817919",
            "owner_id": "608389591302",
            "vpc_id": "vpc-0381064bf1b498187"
          },
          "dependencies": [
            "module.myvpc.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myeip",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0b43155ceeb606297",
            "mac_address": "12:fb:95:7d:cb:d5",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-079f49677937e3f1c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-001d1f158fac47d9b"
          },
          "dependencies": [
            "module.myeip.aws_security_group.allow_web",
            "module.myvpc.aws_subnet.subnet-1",
            "module.myvpc.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07ca6e6150a1b3319",
            "owner_id": "608389591302",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06e2bef3c00817919",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06e2bef3c00817919",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Prod"
            },
            "vpc_id": "vpc-0381064bf1b498187"
          },
          "dependencies": [
            "module.myvpc.aws_internet_gateway.gw",
            "module.myvpc.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072b7b480d5901215",
            "route_table_id": "rtb-07ca6e6150a1b3319",
            "subnet_id": "subnet-001d1f158fac47d9b"
          },
          "dependencies": [
            "module.myvpc.aws_internet_gateway.gw",
            "module.myvpc.aws_route_table.prod-route-table",
            "module.myvpc.aws_subnet.subnet-1",
            "module.myvpc.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myeip",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:608389591302:security-group/sg-079f49677937e3f1c",
            "description": "Allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-079f49677937e3f1c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Big Blue Button Freeswitch",
                "from_port": 16384,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 32768
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "EFS from vpc",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Mysql",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "608389591302",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0381064bf1b498187"
          },
          "dependencies": [
            "module.myvpc.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:608389591302:subnet/subnet-001d1f158fac47d9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-001d1f158fac47d9b",
            "map_public_ip_on_launch": false,
            "owner_id": "608389591302",
            "tags": {
              "Name": "prod-subnet"
            },
            "vpc_id": "vpc-0381064bf1b498187"
          },
          "dependencies": [
            "module.myvpc.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:608389591302:vpc/vpc-0381064bf1b498187",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-078b4fceb4844b45e",
            "default_route_table_id": "rtb-0cc32792bebadc96d",
            "default_security_group_id": "sg-03f198034ebbc5abe",
            "dhcp_options_id": "dopt-619d5e1b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0381064bf1b498187",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cc32792bebadc96d",
            "owner_id": "608389591302",
            "tags": {
              "Name": "production"
            }
          }
        }
      ]
    }
  ]
}